Se agrega operaciones y validacion

--- a/bmailaExamen/Registro.xaml
+++ b/bmailaExamen/Registro.xaml
@@ -3,13 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="bmailaExamen.Registro">
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout>
-            <Label Text="VENTANA DE REGISTRO" FontSize="20" HorizontalTextAlignment="Center"/>
-            <Label x:Name="lblUsuario" HorizontalTextAlignment="End" FontSize="16"/>
-
+        <StackLayout>
+            <Label Text="Ventana de Registro" FontSize="20" HorizontalTextAlignment="Center"/>
+            <Label x:Name="lblUsuario" Text="" FontSize="16" HorizontalTextAlignment="End"/>
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -18,21 +18,18 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Label Text="Nombre" FontSize="18" Grid.Row="0" Grid.Column="0"/>
-                <Entry x:Name="txtNombre" Placeholder="Ingrese nombre" Grid.Row="0" Grid.Column="1"  />
-                
-                <Label Text="Monto Inicial" FontSize="18" Grid.Row="1" Grid.Column="0"/>
-                <Entry x:Name="txtMontoI" Placeholder="Monto inicial"  Keyboard="Numeric" Grid.Row="1" Grid.Column="1" TextChanged="txtMontoI_TextChanged" />
-                
-                <Label Text="Pago Mensual" FontSize="18" Grid.Row="2" Grid.Column="0"/>
-                <Entry x:Name="txtPagoM" Placeholder="Pago Mensual"  Grid.Row="2" Grid.Column="1"/>
+                <Label Text="Nombre" Grid.Row="0" Grid.Column="0"/>
+                <Entry x:Name="txtNombre" Placeholder="Nombre" Grid.Row="0" Grid.Column="1"/>
+                <Label Text="Monto Inicial" Grid.Row="1" Grid.Column="0" />
+                <Entry x:Name="txtMonto" Placeholder="Precio" Keyboard="Numeric" Grid.Row="1" Grid.Column="1" TextChanged="txtMonto_TextChanged"/>
+                <Label Text="Pago Mensual" Grid.Row="2" Grid.Column="0"/>
+                <Entry x:Name="txtPago" Placeholder="Cantidad" Keyboard="Numeric" Grid.Row="2" Grid.Column="1" IsReadOnly="True"/>
+                <Label Text="Pago Total" Grid.Row="3" Grid.Column="0"/>
+                <Entry x:Name="txtPagoT" Placeholder="Cantidad" Keyboard="Numeric" Grid.Row="3" Grid.Column="1" IsReadOnly="True"/>
+
             </Grid>
-                <Entry x:Name="txtResultado" Placeholder="PAgo mensual" IsEnabled="False"/>
-
-                <Button x:Name="btnSiguiente" Text="Calcular" Clicked="btnSiguiente_Clicked"/>
-            <Button x:Name="btnGuardar" Text="Guardar" Clicked="btnGuardar_Clicked"/>
-
+            <Button x:Name="btnCalcular" Text="Calcular" Clicked="btnCalcular_Clicked"/>
+            <Button x:Name="btnGuardar" Text="Guardar Informacion" Clicked="btnGuardar_Clicked"/>
         </StackLayout>
-            </ScrollView>
     </ContentPage.Content>
 </ContentPage>
